@@ -2375,6 +2375,27 @@ static void GA_Deactivate(pDevDesc dd)
 	/* locations to DEVICE coordinates using GConvert	*/
 	/********************************************************/
 
+/* Get a rect based on the current clip rect, but make
+ * sure it does not lie outside device extent.
+ */
+static rect getClipRect(gadesc *xd) {
+    rect r1 = getregion(xd);
+    rect r2 = xd->clip;
+    if (r2.x < r1.x) {
+        r2.width = r1.x - r2.x;
+        r2.x = r1.x;        
+    }
+    if (r2.y < r1.y) {
+        r2.height = r1.y - r2.y;
+        r2.y = r1.y;
+    }
+    if (r2.x + r2.width > r1.x + r1.width) 
+        r2.width = (r1.x + r1.width) - r2.x;
+    if (r2.y + r2.height > r1.y + r1.height)
+        r2.height = (r1.y + r1.height) - r2.y;
+    return r2;
+}
+
 static void GA_Rect(double x0, double y0, double x1, double y1,
 		    const pGEcontext gc,
 		    pDevDesc dd)
@@ -2412,7 +2433,7 @@ static void GA_Rect(double x0, double y0, double x1, double y1,
 	DRAW(gfillrect(_d, xd->fgcolor, r));
     } else if(R_ALPHA(gc->fill) > 0) {
 	if(xd->have_alpha) {
-	    rect cp = xd->clip;
+	    rect cp = getClipRect(xd);
 	    /* We are only working with the screen device here, so
 	       we can assume that x->bm is the current state.
 	       Copying from the screen window does not work. */
@@ -2440,7 +2461,7 @@ static void GA_Rect(double x0, double y0, double x1, double y1,
     } else if(R_ALPHA(gc->col) > 0) {
 	if(xd->have_alpha) {
 	    int adj, tol = xd->lwd; /* only half needed */
-	    rect cp = xd->clip;
+	    rect cp = getClipRect(xd);
 	    rr = r;
 	    r.x -= tol; r.y -= tol; r.width += 2*tol; r.height += 2*tol;
 	    if (r.x < 0) {adj = r.x; r.x = 0; r.width = r.width + adj;}
@@ -2495,7 +2516,7 @@ static void GA_Circle(double x, double y, double radius,
 	DRAW(gfillellipse(_d, xd->fgcolor, rr));
     } else if(R_ALPHA(gc->fill) > 0) {
 	if (xd->have_alpha) {
-	    rect cp = xd->clip;
+	    rect cp = getClipRect(xd);
 	    /* Clip to the device region */
 	    if (r.x < 0) {r.x = 0; r.width = r.width + rr.x;}
 	    if (r.y < 0) {r.y = 0; r.height = r.height + rr.y;}
@@ -2519,7 +2540,7 @@ static void GA_Circle(double x, double y, double radius,
     } else if(R_ALPHA(gc->col) > 0) {
 	if(xd->have_alpha) {
 	    int adj, tol = xd->lwd; /* only half needed */
-	    rect cp = xd->clip;
+	    rect cp = getClipRect(xd);
 	    r.x -= tol; r.y -= tol; r.width += 2*tol; r.height += 2*tol;
 	    if (r.x < 0) {adj = r.x; r.x = 0; r.width = r.width + adj;}
 	    if (r.y < 0) {adj = r.y; r.y = 0; r.height = r.height + adj;}
@@ -2568,7 +2589,14 @@ static void GA_Line(double x1, double y1, double x2, double y2,
 	SH;
     } else if(R_ALPHA(gc->col) > 0) {
 	if(xd->have_alpha) {
-	    rect r = xd->clip;
+	    rect r, rr, cp = getClipRect(xd);
+            r = rr = cp;
+            if (r.x < 0) {r.x = 0; r.width = r.width + rr.x;}
+	    if (r.y < 0) {r.y = 0; r.height = r.height + rr.y;}
+	    if (r.x + r.width > cp.x + cp.width)
+		  r.width = cp.x + cp.width - r.x;
+	    if (r.y + r.height > cp.y + cp.height)
+		  r.height = cp.y + cp.height - r.y;
 	    gsetcliprect(xd->bm, xd->clip);
 	    gcopy(xd->bm2, xd->bm, r);
 	    gdrawline(xd->bm2, xd->lwd, xd->lty, xd->fgcolor,
@@ -2614,7 +2642,15 @@ static void GA_Polyline(int n, double *x, double *y,
 			   xd->lend, xd->ljoin, xd->lmitre));
     } else if(R_ALPHA(gc->col) > 0) {
 	if(xd->have_alpha) {
-	    rect r = xd->clip; /* lines can go well outside bbox of points */
+	    /* lines can go well outside bbox of points */
+	    rect r, rr, cp = getClipRect(xd);
+            r = rr = cp;
+            if (r.x < 0) {r.x = 0; r.width = r.width + rr.x;}
+	    if (r.y < 0) {r.y = 0; r.height = r.height + rr.y;}
+	    if (r.x + r.width > cp.x + cp.width)
+		  r.width = cp.x + cp.width - r.x;
+	    if (r.y + r.height > cp.y + cp.height)
+		  r.height = cp.y + cp.height - r.y;
 	    gsetcliprect(xd->bm, xd->clip);
 	    gcopy(xd->bm2, xd->bm, r);
 	    gdrawpolyline(xd->bm2, xd->lwd, xd->lty, xd->fgcolor, p, n, 0, 0,
@@ -2676,6 +2712,14 @@ static void GA_Polygon(int n, double *x, double *y,
 	DRAW(gfillpolygon(_d, xd->fgcolor, points, n));
     } else if(R_ALPHA(gc->fill) > 0) {
 	if(xd->have_alpha) {
+	    rect rr, cp = getClipRect(xd);
+            rr = r;
+            if (r.x < 0) {r.x = 0; r.width = r.width + rr.x;}
+	    if (r.y < 0) {r.y = 0; r.height = r.height + rr.y;}
+	    if (r.x + r.width > cp.x + cp.width)
+		  r.width = cp.x + cp.width - r.x;
+	    if (r.y + r.height > cp.y + cp.height)
+		  r.height = cp.y + cp.height - r.y;
 	    gsetcliprect(xd->bm, xd->clip);
 	    gcopy(xd->bm2, xd->bm, r);
 	    gfillpolygon(xd->bm2, xd->fgcolor, points, n);
@@ -2690,7 +2734,14 @@ static void GA_Polygon(int n, double *x, double *y,
 			  xd->lend, xd->ljoin, xd->lmitre));
     } else if(R_ALPHA(gc->col) > 0) {
 	if(xd->have_alpha) {
-	    r = xd->clip;
+	    rect r, rr, cp = getClipRect(xd);
+            rr = r = cp;
+            if (r.x < 0) {r.x = 0; r.width = r.width + rr.x;}
+	    if (r.y < 0) {r.y = 0; r.height = r.height + rr.y;}
+	    if (r.x + r.width > cp.x + cp.width)
+		  r.width = cp.x + cp.width - r.x;
+	    if (r.y + r.height > cp.y + cp.height)
+		  r.height = cp.y + cp.height - r.y;
 	    gsetcliprect(xd->bm, xd->clip);
 	    gcopy(xd->bm2, xd->bm, r);
 	    gdrawpolygon(xd->bm2, xd->lwd, xd->lty, xd->fgcolor, points, n, 0,
@@ -2749,6 +2800,14 @@ static void GA_Path(double *x, double *y,
 	DRAW(gfillpolypolygon(_d, xd->fgcolor, points, npoly, nper));
     } else if(R_ALPHA(gc->fill) > 0) {
 	if(xd->have_alpha) {
+	    rect rr, cp = getClipRect(xd);
+            rr = r;
+            if (r.x < 0) {r.x = 0; r.width = r.width + rr.x;}
+	    if (r.y < 0) {r.y = 0; r.height = r.height + rr.y;}
+	    if (r.x + r.width > cp.x + cp.width)
+		  r.width = cp.x + cp.width - r.x;
+	    if (r.y + r.height > cp.y + cp.height)
+		  r.height = cp.y + cp.height - r.y;
 	    gsetcliprect(xd->bm, xd->clip);
 	    gcopy(xd->bm2, xd->bm, r);
 	    gfillpolypolygon(xd->bm2, xd->fgcolor, points, npoly, nper);
@@ -2768,7 +2827,14 @@ static void GA_Path(double *x, double *y,
         }
     } else if(R_ALPHA(gc->col) > 0) {
 	if(xd->have_alpha) {
-	    r = xd->clip;
+	    rect r, rr, cp = getClipRect(xd);
+            r = rr = cp;
+            if (r.x < 0) {r.x = 0; r.width = r.width + rr.x;}
+	    if (r.y < 0) {r.y = 0; r.height = r.height + rr.y;}
+	    if (r.x + r.width > cp.x + cp.width)
+		  r.width = cp.x + cp.width - r.x;
+	    if (r.y + r.height > cp.y + cp.height)
+		  r.height = cp.y + cp.height - r.y;
 	    gsetcliprect(xd->bm, xd->clip);
 	    gcopy(xd->bm2, xd->bm, r);
             pointIndex = points;
@@ -3067,8 +3133,14 @@ static void GA_Text0(double x, double y, const char *str, int enc,
     } else if(R_ALPHA(gc->col) > 0) {
 	/*  it is too hard to get a correct bounding box */
 	if(xd->have_alpha) {
-	    rect r = xd->clip;
-	    r = getregion(xd);
+	    rect r, rr, cp = getClipRect(xd);
+            r = rr = cp;
+            if (r.x < 0) {r.x = 0; r.width = r.width + rr.x;}
+	    if (r.y < 0) {r.y = 0; r.height = r.height + rr.y;}
+	    if (r.x + r.width > cp.x + cp.width)
+		  r.width = cp.x + cp.width - r.x;
+	    if (r.y + r.height > cp.y + cp.height)
+		  r.height = cp.y + cp.height - r.y;
 	    gsetcliprect(xd->bm, xd->clip);
 	    gcopy(xd->bm2, xd->bm, r);
 	    if(gc->fontface != 5) {
